<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:layout_marginBottom="4dp"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtInstagram"
        android:layout_width="312dp"
        android:layout_height="83dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/instagram"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:autofillHints="your username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstagram"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="293dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        app:layout_constraintVertical_bias="0.021"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="293dp"
        android:layout_height="64dp"
        android:layout_marginBottom="332dp"
        android:background="@drawable/login_button"
        android:text="@string/Login"
        android:textColorLink="#2E2C2C"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFacebookLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/facebooklogo"
        android:drawablePadding="8dp"
        android:text="@string/log_in_with_facebook"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toStartOf="@+id/btnFacebookLogin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:srcCompat="@drawable/facebooklogo" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="29dp"
        android:layout_height="16dp"
        android:text="@string/or"
        android:textColor="#FFFFFF"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/btnFacebookLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/forgotPassword"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_help"
        android:textColorLink="#236F6363"
        android:gravity="center"
        android:textSize="12sp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>

